# Autoplot

./: .gitignore  AGENT-GUIDE.md  README.md  autoplotConfig.yml  autoplotConfig_example.yml  pyproject.toml
autoplot/: __init__.py  app.py  cli.py  config.py  nodes.py  notify.py  styles.py
autoplot/fits/: __init__.py
autoplot/loaders/: __init__.py  base.py  ddh5.py  netcdf.py  zarr.py
autoplot/plots/: __init__.py  base.py  complex_hist.py  datatable.py  magnitude_phase.py  value.py
tests/: conftest.py  test_app.py  test_config.py  test_loaders.py  test_nodes.py  test_plots.py
